Correct mistake visibility: none to hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ header a {
     top: 0;     
     transition: 0.5s; 
     width: 0;
-    visibility: none;
+    visibility: hidden;
     z-index: 1; 
 }
 #mobile-nav.visible {
